repaired incorrect svg displaying on IE

--- a/wp-content/themes/event-shares/pagebox/modules/logos_module_new_design/scss/module.scss
+++ b/wp-content/themes/event-shares/pagebox/modules/logos_module_new_design/scss/module.scss
@@ -28,9 +28,9 @@
     margin-left: 0;
     .box {
       margin: 0 auto;
-    //  padding: 0;
       min-height: 100px;
       display: flex;
+      overflow: hidden;
     }
     img {
       padding: 15px;
